--- a/.github/workflows/ibm-cf-v2.yml
+++ b/.github/workflows/ibm-cf-v2.yml
@@ -16,8 +16,8 @@ env:
 on:
   workflow_dispatch:
   repository_dispatch:
-#  schedule:
-#    - cron: 0 21 * * 5
+  schedule:
+    - cron: 12 8 * * 2
 
 jobs:
   deploy:
